--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -163,6 +163,8 @@
   }
   .app-main{
     flex: 1;
+    padding: 12px;
+    background: #eaecef;
   }
   .item-link{
     text-decoration-line: none;
