--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -169,4 +169,14 @@
   .item-link{
     text-decoration-line: none;
   }
+  .footer{
+    height: 24px !important;
+    text-align: left;
+    line-height: 24px;
+    font-size: 12px;
+    a{
+      color: #1890ff;
+      text-decoration-line: none;
+    }
+  }
 }
