--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -52,7 +52,18 @@
   }
   .el-icon-full-screen{
     cursor: pointer;
-    margin-right: 12px;
+  }
+  .user-wrapper{
+    text-align: right;
+  }
+  .el-icon-full-screen + .user-wrapper{
+    margin-left: 12px;
+  }
+  .el-icon-user{
+    font-size: 16px
+  }
+  .el-dropdown-link{
+    cursor: pointer;
   }
   .side-scrollbar{
     background: #304156;
@@ -116,6 +127,7 @@
     flex:1;
     display: inline-flex;
     flex-flow: column;
+    background: #fff;
   }
   .tags-view-container{
     position: relative;
@@ -151,6 +163,7 @@
       font-weight: 400;
       color: #333;
       box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.3);
+      text-align: left;
       li {
         margin: 0;
         padding: 7px 16px;
@@ -174,6 +187,7 @@
     text-align: left;
     line-height: 24px;
     font-size: 12px;
+    background: #fff;
     a{
       color: #1890ff;
       text-decoration-line: none;
