--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -1,5 +1,5 @@
+@import "theme-default";
 .xxWeb-box{
-  @import "theme-default";
   .main-container{
     height: 100vh;
   }
@@ -68,6 +68,9 @@
   }
   .el-icon-search{
     cursor: pointer;
+  }
+  .el-menu{
+    border-right:none;
   }
   .user-menu-item + .user-menu-item{
     margin-left: 12px;
