--- a/src/packages/xxWeb-box/assets/css/theme-default.less
+++ b/src/packages/xxWeb-box/assets/css/theme-default.less
@@ -1,54 +1,53 @@
-.header{
-  color: #000;
-  background: #fff;
-  box-shadow: 0 1px 4px rgba(0,21,41,0.08) !important;
-}
-.side-header{
-  color: #303133;
-}
-.side-scrollbar{
-  background: #304156;
-}
-.side-menu{
-  background: #304156;
-}
-.dynamic-menu{
-  .el-menu{
-    border-right-color: #304156;
+.xxWeb-box[theme='default']{
+  .header{
+    color: #000;
+    background: #fff;
+    box-shadow: 0 1px 4px rgba(0,21,41,0.08) !important;
   }
-  .el-submenu__title,.el-menu-item{
-    color: #fff;
+  .side-header{
+    color: #303133;
+  }
+  .side-scrollbar{
     background: #304156;
   }
-  .is-active{
-    color: #409EFF
+  .side-menu{
+    background: #304156;
   }
-  .el-submenu__title:hover,.el-submenu__title:focus,.el-menu-item:focus,.el-menu-item:hover{
-    background: #263445;
-  }
-}
-.title{
-  color: #fff;
-}
-.layout-main{
-  background: #fff;
-}
-.contextmenu {
-  background: #fff;
-  color: #333;
-  box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.3);
-  li {
-    &:hover {
-      background: #eee;
+  .dynamic-menu{
+    .el-submenu__title,.el-menu-item{
+      color: #fff;
+      background: #304156;
+    }
+    .is-active{
+      color: #409EFF
+    }
+    .el-submenu__title:hover,.el-submenu__title:focus,.el-menu-item:focus,.el-menu-item:hover{
+      background: #263445;
     }
   }
-}
-.app-main{
-  background: #eaecef;
-}
-.footer{
-  background: #fff;
-  a{
-    color: #1890ff;
+  .title{
+    color: #fff;
+  }
+  .layout-main{
+    background: #fff;
+  }
+  .contextmenu {
+    background: #fff;
+    color: #333;
+    box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.3);
+    li {
+      &:hover {
+        background: #eee;
+      }
+    }
+  }
+  .app-main{
+    background: #eaecef;
+  }
+  .footer{
+    background: #fff;
+    a{
+      color: #1890ff;
+    }
   }
 }
