--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -12,8 +12,11 @@
     height: 52px !important;
     transition: background .3s;
   }
-  .side-header{
+  .header-content{
     height: 100%;
+    .log{
+      margin-right: 15px;
+    }
   }
   .row-head{
     display: flex;
@@ -41,6 +44,7 @@
   .head-title{
     text-align: left;
     font-size: 14px;
+    margin-right: 15px;
   }
   .col-user-menu{
     display: inline-flex;
