--- a/src/packages/xxWeb-box/assets/css/theme-default.less
+++ b/src/packages/xxWeb-box/assets/css/theme-default.less
@@ -4,6 +4,21 @@
     background: #fff;
     box-shadow: 0 1px 4px rgba(0,21,41,0.08) !important;
   }
+  .top-header{
+    color: #fff;
+    background: #304156;
+    box-shadow: 0 1px 4px rgba(0,21,41,0.08) !important;
+    .user-wrapper{
+      .el-dropdown{
+        color: #fff;
+      }
+    }
+    .el-breadcrumb__inner{
+      a{
+        color: #fff;
+      }
+    }
+  }
   .side-header{
     color: #303133;
   }
