--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -34,7 +34,6 @@
     vertical-align: middle;
     width: 20px;
     height: 20px;
-    margin-right: 15px;
     cursor: pointer;
     transform: rotate(180deg);
   }
@@ -44,9 +43,8 @@
   .head-title{
     text-align: left;
     font-size: 14px;
-    margin-right: 15px;
   }
-  .col-user-menu{
+  .right-con{
     display: inline-flex;
     justify-content: flex-end;
     align-items: center
@@ -77,8 +75,8 @@
     border-right:none;
     background:none;
   }
-  .user-menu-item + .user-menu-item{
-    margin-left: 12px;
+  .user-menu-item+.user-menu-item{
+    margin-left: 15px;
   }
   .el-icon-user{
     font-size: 16px
