--- a/src/packages/xxWeb-box/assets/css/theme-default.less
+++ b/src/packages/xxWeb-box/assets/css/theme-default.less
@@ -66,3 +66,18 @@
     }
   }
 }
+.el-menu--popup{
+  background-color: #304156;
+}
+.s2-item-link{
+  .el-submenu__title,.el-menu-item{
+    color: #fff !important;
+    background-color: #304156 !important;
+  }
+  .is-active{
+    color: #409EFF !important;
+  }
+  .el-submenu__title:hover,.el-submenu__title:focus,.el-menu-item:focus,.el-menu-item:hover{
+    background: #263445 !important;
+  }
+}
