--- a/src/packages/xxWeb-box/assets/css/theme-default.less
+++ b/src/packages/xxWeb-box/assets/css/theme-default.less
@@ -66,6 +66,9 @@
       color: #1890ff;
     }
   }
+  .mobile-drawer{
+    background-color: #304156;
+  }
 }
 .el-menu--popup{
   background-color: #304156;
