--- a/src/packages/xxWeb-box/assets/css/theme-default.less
+++ b/src/packages/xxWeb-box/assets/css/theme-default.less
@@ -1,87 +1,108 @@
 .xxWeb-box[theme='default']{
+  @--main-bg-color: #304156;
+  @--text-color: #fff;
+  @--active-color:#409EFF;
+  @--menu-hover-color:263445;
+  @--sideMenu-header-color:#303133;
+  @--sideMenu-header-bg-color:#fff;
+  @--header-shadow-color:#00000033;
+  @--topMenu-header-color:#fff;
+  @--topMenu-header-bg-color:@--main-bg-color;
+  @--topMenu-shadow-color:rgba(0,21,41,0.08);
+  @--contextmenu-bg-color:#eee;
+  @--footer-bg-color:#fff;
+  @--footer-text-color:#409EFF;
+  @--app-main-bg-color:#eaecef;
   .header{
-    color: #000;
-    background: #fff;
-    box-shadow: 0 1px 4px rgba(0,21,41,0.08) !important;
+    color: @--sideMenu-header-color;
+    background: @--sideMenu-header-bg-color;
+    box-shadow: 0 0px 4px @--header-shadow-color !important;
   }
   .top-header{
-    color: #fff;
-    background: #304156;
-    box-shadow: 0 1px 4px rgba(0,21,41,0.08) !important;
+    color: @--topMenu-header-color;
+    background: @--topMenu-header-bg-color;
     .user-wrapper{
       .el-dropdown{
-        color: #fff;
+        color: @--text-color;
       }
     }
     .el-breadcrumb__inner{
       a{
-        color: #fff;
+        color: @--text-color;
       }
     }
   }
   .side-header{
-    color: #303133;
+    color: @--sideMenu-header-color;
+    background: @--sideMenu-header-bg-color;
   }
   .side-scrollbar{
-    background: #304156;
+    background: @--main-bg-color
   }
   .side-menu{
-    background: #304156;
+    background: @--main-bg-color;
   }
   .dynamic-menu{
     .el-submenu__title,.el-menu-item{
-      color: #fff;
-      background: #304156;
+      color: @--text-color;
+      background: @--main-bg-color;
     }
 
     .is-active{
-      color: #409EFF
+      color: @--active-color
     }
     .el-submenu__title:hover,.el-submenu__title:focus,.el-menu-item:focus,.el-menu-item:hover{
-      background: #263445;
+      background: @--menu-hover-color;
     }
   }
   .title{
-    color: #fff;
+    color: @--text-color;
   }
   .layout-main{
-    background: #fff;
+    background: @--text-color;
   }
   .contextmenu {
-    background: #fff;
-    color: #333;
-    box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.3);
+    background: @--text-color;
+    color: @--sideMenu-header-color;
+    box-shadow: 2px 2px 3px 0 @--header-shadow-color;
     li {
       &:hover {
-        background: #eee;
+        background: @--contextmenu-bg-color;
       }
     }
   }
   .app-main{
-    background: #eaecef;
+    background: @--app-main-bg-color;
   }
   .footer{
-    background: #fff;
+    background: @--footer-bg-color;
     a{
-      color: #1890ff;
+      color: @--footer-text-color;
     }
   }
   .mobile-drawer{
-    background-color: #304156;
+    background-color: @--main-bg-color;
   }
 }
-.el-menu--popup{
-  background-color: #304156;
+.xxWeb-box-default{
+  @--main-bg-color: #304156;
+  @--text-color: #fff;
+  @--active-color:#409EFF;
+  @--menu-hover-color:263445;
+  .el-menu--popup{
+    background-color: @--main-bg-color;
+  }
+  .s2-item-link{
+    .el-submenu__title,.el-menu-item{
+      color: @--text-color !important;
+      background-color: @--main-bg-color !important;
+    }
+    .is-active{
+      color: @--active-color !important;
+    }
+    .el-submenu__title:hover,.el-submenu__title:focus,.el-menu-item:focus,.el-menu-item:hover{
+      background: @--menu-hover-color !important;
+    }
+  }
 }
-.s2-item-link{
-  .el-submenu__title,.el-menu-item{
-    color: #fff !important;
-    background-color: #304156 !important;
-  }
-  .is-active{
-    color: #409EFF !important;
-  }
-  .el-submenu__title:hover,.el-submenu__title:focus,.el-menu-item:focus,.el-menu-item:hover{
-    background: #263445 !important;
-  }
-}
+
