--- a/src/packages/xxWeb-box/assets/css/theme-vue-admin.less
+++ b/src/packages/xxWeb-box/assets/css/theme-vue-admin.less
@@ -1,13 +1,14 @@
 .xxWeb-box[theme='default']{
-  @--main-bg-color: #001529;
+  @--main-bg-color: #304156;
   @--text-color: #fff;
   @--active-color:#409EFF;
-  @--menu-hover-color:#263445;
+  @--menu-hover-color:#ffffffa6;
+  @--menu-hover-bg-color:#001528FF;
   @--sideMenu-header-color:#303133;
   @--sideMenu-header-bg-color:#fff;
   @--menu-item-text-color:#ffffffa6;
-  @--submenu-item-bg-color:#000c17;
-  @--logo-bg-color:#002140;
+  @--submenu-item-bg-color:#1f2d3d;
+  @--logo-bg-color:#304156;
   @--header-shadow-color:#00000033;
   @--topMenu-header-color:#fff;
   @--topMenu-header-bg-color:@--main-bg-color;
@@ -55,14 +56,15 @@
     }
     .el-submenu.is-active.is-opened,.el-submenu:hover{
       .el-submenu__title,.el-submenu__title i{
-        color:@--text-color;
+        color:@--menu-item-text-color;
       }
     }
     .is-active{
       color: @--active-color
     }
-    .el-submenu__title:hover,.el-submenu__title:focus,.el-menu-item:focus,.el-menu-item:hover{
-      background: @--menu-hover-color;
+    .el-submenu__title:hover,.el-submenu__title:focus,.el-menu-item:focus,.el-menu-item:hover,.el-submenu .el-menu-item:hover{
+      color: @--menu-hover-color !important;
+      background: @--menu-hover-bg-color !important;
     }
     .el-submenu {
       .el-menu-item{
