--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -107,6 +107,9 @@
   }
   .dynamic-menu{
     overflow: hidden;
+    .el-menu-item i,.el-submenu__title i{
+      color: inherit;
+    }
   }
   .menu-obj:not(.el-menu--collapse) {
     width: 100%;
