--- a/src/packages/xxWeb-box/assets/css/theme-default.less
+++ b/src/packages/xxWeb-box/assets/css/theme-default.less
@@ -51,7 +51,7 @@
   .dynamic-menu{
     .el-submenu__title,.el-menu-item{
       color: @--menu-item-text-color;
-      background: @--main-bg-color;
+      background-color: @--main-bg-color;
     }
     .el-submenu.is-active.is-opened,.el-submenu:hover{
       .el-submenu__title,.el-submenu__title i{
@@ -62,11 +62,11 @@
       color: @--active-color
     }
     .el-submenu__title:hover,.el-submenu__title:focus,.el-menu-item:focus,.el-menu-item:hover{
-      background: @--menu-hover-color;
+      background-color: @--menu-hover-color;
     }
     .el-submenu {
       .el-menu-item{
-        background: @--submenu-item-bg-color;
+        background-color: @--submenu-item-bg-color;
       }
     }
   }
