--- a/src/packages/xxWeb-box/assets/css/theme-vue-admin.less
+++ b/src/packages/xxWeb-box/assets/css/theme-vue-admin.less
@@ -8,6 +8,7 @@
   @--menu-item-active-text-color:#f4f4f5;
   @--menu-text-hover-color:#bfcbd9;
   @--menu-item-hover-bg-color:#263445;
+  @--menu-sub-item-hover-bg-color:#001528FF;
   @--submenu-item-bg-color:#1f2d3d;
   @--logo-bg-color:#304156;
   @--header-shadow-color:#00000033;
@@ -59,7 +60,7 @@
       .el-menu-item{
         background-color: @--submenu-item-bg-color;
         &:hover{
-          background-color: #001528FF !important;
+          background-color: @--menu-sub-item-hover-bg-color !important;
         }
       }
     }
