--- a/src/packages/xxWeb-box/assets/css/theme-vue-admin.less
+++ b/src/packages/xxWeb-box/assets/css/theme-vue-admin.less
@@ -23,6 +23,9 @@
     color: @--sideMenu-header-color;
     background: @--sideMenu-header-bg-color;
     box-shadow: 0 0px 4px @--header-shadow-color !important;
+    .logo{
+      background: @--logo-bg-color;
+    }
   }
   .top-header{
     color: @--topMenu-header-color;
@@ -37,6 +40,9 @@
         color: @--text-color;
       }
     }
+    .logo{
+      background:@--main-bg-color;
+    }
   }
   .side-header{
     color: @--sideMenu-header-color;
@@ -47,9 +53,6 @@
   }
   .side-menu{
     background: @--main-bg-color;
-  }
-  .logo{
-    background: @--logo-bg-color;
   }
   .dynamic-menu{
     .el-submenu__title,.el-menu-item,.el-submenu__title:focus,.el-menu-item:focus{
