--- a/src/packages/xxWeb-box/assets/css/theme-v2board.less
+++ b/src/packages/xxWeb-box/assets/css/theme-v2board.less
@@ -57,6 +57,10 @@
   }
   .dynamic-menu{
     padding: 20px 14px;
+    .el-menu-item{
+      line-height: 40px;
+      height: 40px;
+    }
     .el-submenu__title,.el-menu-item,.el-submenu__title:focus,.el-menu-item:focus{
       color: @--menu-item-text-color;
       background-color: @--main-bg-color;
