--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -1,6 +1,7 @@
 @import "theme-default";
 @import "theme-vue-admin";
 @import "theme-v2board";
+@import "theme-thunder";
 .xxWeb-box{
   .main-container{
     height: 100vh;
