--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -58,6 +58,19 @@
   .user-wrapper{
     text-align: right;
   }
+  .side-menu{
+    .user-wrapper{
+      .el-dropdown{
+        color: #FECE5C;
+      }
+      text-align: left;
+      margin: 0 20px;
+      height: 76px;
+      margin-bottom: 13px;
+      line-height: 76px;
+      border-bottom: 1px solid #58626A;
+    }
+  }
   .menu-search-box{
     width: 180px;
     display: inline-flex;
