--- a/src/packages/xxWeb-box/assets/css/theme-thunder.less
+++ b/src/packages/xxWeb-box/assets/css/theme-thunder.less
@@ -1,15 +1,15 @@
 .xxWeb-box[theme='thunder']{
-  @--main-bg-color: #3C4752;
+  @--main-bg-color: #3C4852;
   @--text-color: #fff;
-  @--active-color:#409EFF;
+  @--active-color:#50A1FC;
   @--sideMenu-header-color:#303133;
   @--sideMenu-header-bg-color:#fff;
-  @--menu-item-text-color:#ffffffa6;
+  @--menu-item-text-color:rgb(175,180,184);
   @--menu-text-hover-color:#f4f4f5;
   @--menu-item-active-text-color:#ffffff;
   @--menu-item-hover-bg-color:#303941;
   @--submenu-item-bg-color:#3C4752;
-  @--submenu-item-active-bg-color:#242A31;
+  @--submenu-item-active-bg-color:#252C32;
   @--menu-sub-item-hover-bg-color:@--main-bg-color;
   @--logo-bg-color:#002140;
   @--header-shadow-color:#00000033;
