--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -64,11 +64,47 @@
         color: #FECE5C;
       }
       text-align: left;
-      margin: 0 20px;
-      height: 76px;
+      padding: 20px;
+      height: 56px;
       margin-bottom: 13px;
-      line-height: 76px;
       border-bottom: 1px solid #58626A;
+    }
+    .user-wrapper-container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+    }
+    .user-wrapper-avatar{
+      margin-right:12px;
+    }
+    .user-vip{
+      .user-vip-img{
+        height: 27px;
+        width: 27px;
+        display: inline-block;
+        background: url("../../assets/imgs/diamond.svg") no-repeat left bottom;
+        background-size: contain;
+        float: left;
+        z-index: 2;
+        position: relative;
+      }
+      .user-vip-text{
+        height: 16px;
+        line-height: 16px;
+        display: inline-block;
+        padding: 0px 3px;
+        border-radius: 0px 3px 3px 0;
+        margin-left: -13px;
+        margin-top: 10px;
+        background-color: #FF0101;
+        font-size: 11px;
+        font-weight: bold;
+        color: #FCFF01;
+        float: left;
+        z-index: 1;
+        text-indent: 8px;
+      }
     }
   }
   .menu-search-box{
