--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -75,8 +75,11 @@
       align-items: center;
       height: 100%;
     }
-    .user-wrapper-avatar{
-      margin-right:12px;
+    .user-wrapper-username{
+      margin-left: 12px;
+    }
+    .avatar-img{
+      background-color: #fff
     }
     .user-vip{
       .user-vip-img{
