--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -82,6 +82,7 @@
       background-color: #fff
     }
     .user-vip{
+      margin-top: 3px;
       .user-vip-img{
         height: 27px;
         width: 27px;
