--- a/src/packages/xxWeb-box/assets/css/theme-thunder.less
+++ b/src/packages/xxWeb-box/assets/css/theme-thunder.less
@@ -70,6 +70,10 @@
         background-color: @--menu-item-hover-bg-color;
       }
     }
+    .el-submenu__title{
+      height: 40px;
+      line-height: 40px;
+    }
     .el-submenu__title:hover{
       color: @--menu-text-hover-color;
       background-color: @--menu-item-hover-bg-color;
