--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -200,6 +200,7 @@
     flex:1;
     display: inline-flex;
     flex-flow: column;
+    overflow: auto;
   }
   .tags-view-container{
     position: relative;
@@ -263,6 +264,7 @@
     text-align: left;
     line-height: 24px;
     font-size: 12px;
+    box-shadow: 0 0px 4px #00000033 !important;
     a{
       text-decoration-line: none;
     }
