--- a/src/packages/xxWeb-box/assets/css/theme-thunder.less
+++ b/src/packages/xxWeb-box/assets/css/theme-thunder.less
@@ -19,7 +19,7 @@
   @--contextmenu-bg-color:#eee;
   @--footer-bg-color:#fff;
   @--footer-text-color:#409EFF;
-  @--app-main-bg-color:#eaecef;
+  @--app-main-bg-color:#FFFFFF;
   .header{
     color: @--sideMenu-header-color;
     background: @--sideMenu-header-bg-color;
