--- a/src/packages/xxWeb-box/assets/css/jeecg-login.less
+++ b/src/packages/xxWeb-box/assets/css/jeecg-login.less
@@ -1,5 +1,14 @@
+html,body{
+  width: 100%;
+  height: 100%;
+}
+#app{
+  height: 100%;
+}
 .jeecg-user-login {
   height: 100%;
+  background: #2D3A4B url('../imgs/background.svg') no-repeat center center;
+  background-size: contain;
   &.mobile {
     .container {
       .main {
@@ -11,8 +20,6 @@
 
   .container {
     width: 100%;
-    min-height: 100%;
-    background: #2D3A4B url('../imgs/background.svg') no-repeat 50%;
     background-size: 100%;
     padding: 110px 0 144px;
     position: relative;
@@ -66,13 +73,14 @@
       min-width: 260px;
       width: 368px;
       margin: 0 auto;
+      margin-top: 60px;
+      text-align:left;
       .login-btn{
         width: 100%;
         font-size: 16px
       }
       .login-title{
         font-size: 14px;
-        display: inline-block;
         height: 45px;
         width: 88px;
         text-align: center;
