--- a/src/packages/xxWeb-box/assets/css/jeecg-login.less
+++ b/src/packages/xxWeb-box/assets/css/jeecg-login.less
@@ -74,6 +74,7 @@ html,body{
       width: 368px;
       margin: 0 auto;
       margin-top: 60px;
+      color:#fff;
       text-align:left;
       .login-btn{
         width: 100%;
