--- a/src/packages/xxWeb-box/assets/css/jeecg-login.less
+++ b/src/packages/xxWeb-box/assets/css/jeecg-login.less
@@ -96,11 +96,12 @@ html,body{
         background-color: #283443;
         border-color: #696969;
         color: #fff;
-
         &:focus {
           border-color: #409EFF;
         }
-
+        &::placeholder{
+          color:#606266
+        }
         &:-webkit-autofill {
           -webkit-box-shadow: 0 0 0px 32px #283443 inset;
           -webkit-text-fill-color: #fff;
