--- a/src/packages/xxWeb-box/assets/css/jeecg-login.less
+++ b/src/packages/xxWeb-box/assets/css/jeecg-login.less
@@ -5,7 +5,8 @@ html,body{
 #app{
   height: 100%;
 }
-.jeecg-user-login {
+.jeecg-login {
+  width: 100%;
   height: 100%;
   background: #2D3A4B url('../imgs/background.svg') no-repeat center center;
   background-size: contain;
